# gitlab-deploy

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci-version.yml  ci.yml
src/: back_control.rs  back_deploy.rs  back_develop.rs  cli.rs  constants.rs  front_control.rs  front_deploy.rs  front_develop.rs  functions.rs  lib.rs  main.rs  simple_control.rs  simple_deploy.rs
src/models/: api_token.rs  api_url_prefix.rs  build_target.rs  command.rs  commit_sha.rs  image_name.rs  mod.rs  name.rs  phase.rs  project_path.rs  reference.rs  ssh_url_prefix.rs
src/parse/: api_token.rs  api_url_prefix.rs  build_target.rs  command.rs  commit_sha.rs  image_name.rs  mod.rs  name.rs  phase.rs  project_path.rs  public_name.rs  reference.rs  ssh_url_prefix.rs  ssh_user_host.rs
