[package]
name = "gitlab-deploy"
version = "0.1.9"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.63"
repository = "https://github.com/magiclen/gitlab-deploy"
homepage = "https://magiclen.org/gitlab-deploy"
keywords = ["deploy"]
categories = ["command-line-utilities"]
description = "This tool is used for deploying software projects to multiple hosts during different phases."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "3.2.23", features = ["env"] }
concat-with = "0.2"
terminal_size = "0.2"

execute = "0.2.9"

once_cell = "1.8.0"
regex = "1.5.4"

trim-in-place = "0.1.6"
slash-formatter = "3.1.2"
tempfile = "3.2.0"
scanner-rust = "2.0.15"
chrono = "0.4.19"

log = "0.4.14"
simplelog = "0.12"

[dependencies.validators]
version = "0.24"
default-features = false
features = ["derive", "regex", "line", "http_url"]
