[package]
name = "gitlab-deploy"
version = "0.2.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.67"
repository = "https://github.com/magiclen/gitlab-deploy"
homepage = "https://magiclen.org/gitlab-deploy"
keywords = ["deploy"]
categories = ["command-line-utilities"]
description = "This tool is used for deploying software projects to multiple hosts during different phases."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
concat-with = "0.2"
terminal_size = "0.3"

anyhow = "1"

execute = "0.2"

once_cell = "1"
regex = "1"

trim-in-place = "0.1"
slash-formatter = "3"
tempfile = "3"
scanner-rust = "2"
chrono = "0.4"

log = "0.4"
simplelog = "0.12"

[dependencies.validators]
version = "0.25"
default-features = false
features = ["derive", "regex", "line", "http_url"]
